--- a/angular.json
+++ b/angular.json
@@ -135,13 +135,13 @@
           "options": {
             "tsConfig": "projects/dev-kit/tsconfig.lib.json",
             "project": "projects/dev-kit/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/dev-kit/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -163,6 +163,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "angular-dev-kit"
 }
